workers: try to more gracefully shutdown worker processes

This still isn't "graceful" in that we don't notify the children processes
to cleanly exit, but it does more gracefully cleanup the GDBusServer.

Sometimes, it looks like the GDBusServer would get in a spinloop with
accepting connections on a closed file-descriptor.

Doing this forced cleanup should fix that.

https://bugzilla.gnome.org/show_bug.cgi?id=764823